--- a/index.html
+++ b/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+
+    <title>NewsWeek Clone</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="d-flex justify-content-between align-items-center">
+        <div>
+          <img
+            class="newsweek-logo ml-3"
+            src="images/logo.svg"
+            alt="NewsWeek-logo"
+          />
+        </div>
+        <div class="d-flex align-items-center">
+          <a href=""><i class="ml-3 fas fa-user-alt"></i></a>
+          <button class="subscribe ml-3 my-2 btn btn-warning">
+            Subscribe
+          </button>
+          <a href=""><i class="mx-3 fas fa-bars"></i></a>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
