add featured section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,35 @@
             </div>
         </nav>
     </header>
+
+    <!-- MAIN SHOWCASE SECTION -->
+
+    <section class="mt-3">
+        <div class="container-fluid container-md">
+            <div class="featured-stories-div row">
+                <div class="container-fluid">
+                    <h4 class="featured-stories-header">FEATURED STORIES</h4>
+
+                </div>
+                <div class="col-md-5">
+                    <div class="featured-stories">
+                        <div class="featured-stories-bg-img position-relative">
+                            <p class="featured-div-content position-absolute">HEALTH</p>
+
+                        </div>
+                        <h3 class="featured-stories-heading">Fauci Warns Even the Healthy Can Have Coronavirus Symptoms
+                            for Months</h3>
+                        <p class="featured-stories-p">The U.S. makes up around a quarter of both the worldwide total of
+                            COVID-19 cases and deaths.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="top-stories col-md-7"></div>
+            <div class="the-debate"></div>
+        </div>
+    </section>
 </body>
 
 </html>
