--- a/index.html
+++ b/index.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-        crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>NewsWeek Clone</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav class="d-flex justify-content-between align-items-center">
-            <div>
-                <img class="newsweek-logo ml-3" src="images/newsweek-logo.svg" alt="NewsWeek-logo" />
-            </div>
-            <div class="d-flex align-items-center">
-                <a href=""><i class="ml-3 fas fa-user-alt"></i></a>
-                <button class="subscribe ml-3 my-2 btn btn-warning">
-                    Subscribe
-                </button>
-                <a href=""><i class="mx-3 fas fa-bars"></i></a>
-            </div>
-        </nav>
+      <nav class="d-flex justify-content-between align-items-center">
+        <div>
+          <img
+            class="newsweek-logo ml-3"
+            src="images/newsweek-logo.svg"
+            alt="NewsWeek-logo"
+          />
+        </div>
+        <div class="d-flex align-items-center">
+          <i class="ml-3 fas fa-user-alt"></i>
+          <button class="subscribe ml-3 my-2 btn btn-warning">
+            Subscribe
+          </button>
+          <i class="mx-3 fas fa-bars"></i>
+        </div>
+      </nav>
     </header>
 
     <!-- MAIN SHOWCASE SECTION -->
 
     <section class="mt-3">
-        <div class="container-fluid container-md">
-            <div class="featured-stories-div row">
-                <div class="container-fluid">
-                    <h4 class="featured-stories-header">FEATURED STORIES</h4>
-
-                </div>
-                <div class="col-md-5">
-                    <div class="featured-stories">
-                        <div class="featured-stories-bg-img position-relative">
-                            <p class="featured-div-content position-absolute">HEALTH</p>
-
-                        </div>
-                        <h3 class="featured-stories-heading">Fauci Warns Even the Healthy Can Have Coronavirus Symptoms
-                            for Months</h3>
-                        <p class="featured-stories-p">The U.S. makes up around a quarter of both the worldwide total of
-                            COVID-19 cases and deaths.
-                        </p>
-                    </div>
-
-                </div>
+      <div class="container-fluid container-md">
+        <div class="featured-stories-div row"></div>
+          <div>
+            <div class="container-fluid">
+              <h4 class="featured-stories-header">FEATURED STORIES</h4>
             </div>
-            <div class="top-stories col-md-7"></div>
-            <div class="the-debate"></div>
+            <div class="col-md-5">
+              <div class="featured-stories">
+                <div class="featured-stories-bg-img position-relative">
+                  <p class="featured-div-content mb-n1 p-2 position-absolute">
+                    HEALTH
+                  </p>
+                </div>
+                <h3 class="featured-stories-heading">
+                  Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                  Months
+                </h3>
+                <p class="featured-stories-p">
+                  The U.S. makes up around a quarter of both the worldwide total
+                  of COVID-19 cases and deaths.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
-</body>
 
+        <div class="top-stories col-md-7"></div>
+        <div class="the-debate"></div>
+      </div>
+    </section>
+  </body>
 </html>
