--- a/index.html
+++ b/index.html
@@ -562,17 +562,183 @@
           </div>
         </div>
   </section>
-
-  <section>
-    <div class="sign-up w-50 mx-auto bg-white h-167 p-50">
+<!-- SIGN-UP FORM -->
+  <section class="bg-white">
+    <div class="sign-up w-50 mx-auto  h-167 p-50">
       <div class="sign-up-div d-flex justify-content-center">
-        <p class="text-center"><img src="https://g.newsweek.com/www/images/logo-n1.svg"" alt=""> START YOUR DAY WITH OUR <br> TOP FIVE ARTICLES</p>
+        <p class="text-center"><img src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> START YOUR DAY WITH OUR <br> TOP FIVE ARTICLES</p>
       </div>
-      <div class=" d-flex flex-column text-center">
-          <input type=" text" placeholder="Email Address">
-          <button>FREE SIGN UP</button>
+      <div class="  w-75 mx-auto d-flex flex-column ">
+          <input  class= "mb-3 border-0" type="email" placeholder="Email Address">
+          <button class="border-0 bg-danger">FREE SIGN UP</button>
       </div>
     </div>
+  </section>
+  <!-- MAGAZINE-SECTION  -->
+  <section class="mt-5  container-fluid ">
+    <div class="magazine-section ">
+      <p class="text-center"><img  class="magazine-section-logo"src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> IN THE MAGAZINE </p>
+    </div>
+    <div class="justify-content-center">
+      <div class="my-3">
+        <img class="w-100 " src="images/magazine-image.jpg" alt="">
+      </div>
+      <div >
+        <div class="my-3">
+          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <p><span>COVER</span> <span>HEALTH</span> </p>
+          <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
+        </div>
+        <div class="my-3">
+          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <p><span>COVER</span> <span>HEALTH</span> </p>
+          <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
+        </div>
+        <div class="my-3">
+          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <p><span>COVER</span> <span>HEALTH</span> </p>
+          <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
+        </div>
+        <div class="my-3">
+          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <p><span>COVER</span> <span>HEALTH</span> </p>
+          <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
+        </div>
+        <div class="my-3">
+          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <p><span>COVER</span> <span>HEALTH</span> </p>
+          <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
+        </div>
+     </div>
+    </div>
+  </section>
+
+  <!-- EDITORS PICK -->
+  <section class="mt-5  container-fluid ">
+    <div class="editors-pick ">
+      <p class="text-center"><img  class="editors-pick-logo"src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> EDITORS PICK</p>
+    </div>
+    <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+        <div class="featured-stories">
+              <div class="editors-pick-bg-img position-relative">
+                <p class="featured-div-content mb-n1 p-2 position-absolute">
+                  HEALTH
+                </p>
+              </div>
+              <h3 class="featured-stories-heading">
+                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+                Months
+              </h3>
+              <p class="featured-stories-p">
+                The U.S. makes up around a quarter of both the worldwide total
+                of COVID-19 cases and deaths.
+              </p>
+    </div>
+
   </section>
 </body>
 
