add subscribton and news letter section

--- a/index.html
+++ b/index.html
@@ -562,183 +562,216 @@
           </div>
         </div>
   </section>
-<!-- SIGN-UP FORM -->
-  <section class="bg-white">
-    <div class="sign-up w-50 mx-auto  h-167 p-50">
+  <!-- SIGN-UP FORM -->
+  <section class="sign-up-section py-5 bg-white">
+    <div class="sign-up w-50 mx-auto h-167 py-4">
       <div class="sign-up-div d-flex justify-content-center">
-        <p class="text-center"><img src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> START YOUR DAY WITH OUR <br> TOP FIVE ARTICLES</p>
+        <p class="text-center"><img src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> START YOUR DAY WITH OUR
+          <br> TOP FIVE ARTICLES</p>
       </div>
       <div class="  w-75 mx-auto d-flex flex-column ">
-          <input  class= "mb-3 border-0" type="email" placeholder="Email Address">
-          <button class="border-0 bg-danger">FREE SIGN UP</button>
+        <input class="mb-3 border-0" type="email" placeholder="Email Address">
+        <button class="border-0 bg-danger">FREE SIGN UP</button>
       </div>
     </div>
   </section>
   <!-- MAGAZINE-SECTION  -->
   <section class="mt-5  container-fluid ">
     <div class="magazine-section ">
-      <p class="text-center"><img  class="magazine-section-logo"src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> IN THE MAGAZINE </p>
+      <p class="text-center"><img class="magazine-section-logo" src="https://g.newsweek.com/www/images/logo-n1.svg"
+          alt=""> IN THE MAGAZINE </p>
     </div>
     <div class="justify-content-center">
       <div class="my-3">
         <img class="w-100 " src="images/magazine-image.jpg" alt="">
       </div>
-      <div >
+      <div>
         <div class="my-3">
-          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <img class="w-100" src="images/magazine-image.jpg" alt="">
           <p><span>COVER</span> <span>HEALTH</span> </p>
           <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
         </div>
         <div class="my-3">
-          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <img class="w-100" src="images/magazine-image.jpg" alt="">
           <p><span>COVER</span> <span>HEALTH</span> </p>
           <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
         </div>
         <div class="my-3">
-          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <img class="w-100" src="images/magazine-image.jpg" alt="">
           <p><span>COVER</span> <span>HEALTH</span> </p>
           <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
         </div>
         <div class="my-3">
-          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <img class="w-100" src="images/magazine-image.jpg" alt="">
           <p><span>COVER</span> <span>HEALTH</span> </p>
           <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
         </div>
         <div class="my-3">
-          <img class="w-100"src="images/magazine-image.jpg" alt="">
+          <img class="w-100" src="images/magazine-image.jpg" alt="">
           <p><span>COVER</span> <span>HEALTH</span> </p>
           <P>How the Pandemic Is Making the Opioid Crisis Worse</P>
         </div>
-     </div>
+      </div>
     </div>
   </section>
 
   <!-- EDITORS PICK -->
   <section class="mt-5  container-fluid ">
     <div class="editors-pick ">
-      <p class="text-center"><img  class="editors-pick-logo"src="https://g.newsweek.com/www/images/logo-n1.svg" alt=""> EDITORS PICK</p>
+      <p class="text-center"><img class="editors-pick-logo" src="https://g.newsweek.com/www/images/logo-n1.svg" alt="">
+        EDITORS PICK</p>
     </div>
     <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
-        <div class="featured-stories">
-              <div class="editors-pick-bg-img position-relative">
-                <p class="featured-div-content mb-n1 p-2 position-absolute">
-                  HEALTH
-                </p>
-              </div>
-              <h3 class="featured-stories-heading">
-                Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
-                Months
-              </h3>
-              <p class="featured-stories-p">
-                The U.S. makes up around a quarter of both the worldwide total
-                of COVID-19 cases and deaths.
-              </p>
+    <div class="featured-stories">
+      <div class="editors-pick-bg-img position-relative">
+        <p class="featured-div-content mb-n1 p-2 position-absolute">
+          HEALTH
+        </p>
+      </div>
+      <h3 class="featured-stories-heading">
+        Fauci Warns Even the Healthy Can Have Coronavirus Symptoms for
+        Months
+      </h3>
+      <p class="featured-stories-p">
+        The U.S. makes up around a quarter of both the worldwide total
+        of COVID-19 cases and deaths.
+      </p>
     </div>
 
+  </section>
+
+  <!-- SUBSCRIBE -->
+  <section class="sub-sec bg-white mt-5 py-5 container-fluid ">
+    <h4>SUBSCRIBE</h4>
+    <div class="sub-div mx-auto text-center">
+      <img class="mr-n5" src="./images/subscribe-1.jpg" alt="">
+      <img class="sub-img-2 ml-n5" src="./images/subscribe-2.jpg" alt="">
+
+      <div class="mt-n5">
+        <p class="font-weight-bold">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+        <p>All access + weekly delivery <br> Choose A Membership Thats Perfect For You</p>
+      </div>
+      <button class="sub-btn px-2 py-2 mb-3 text-white border-0 rounded">SUBSCRIBE</button>
+
+    </div>
+
+  </section>
+
+  <!-- NEWS LETTER -->
+  <section class="news-section">
+    <h4>NEWS LETTER</h4>
+    <div class="news-letter d-flex flex-column justify-content-center align-items-center mx-auto">
+      <h5 class="font-weight-bold">The Starting 5</h5>
+      <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5</p>
+
+      <input class="news-letter-input" type="text" placeholder="Email Address">
+
+      <button class="my-2 border-0 text-white  btn btn-block n font-weight-bold">FREE SIGN UP</button>
+    </div>
   </section>
 </body>
 
