add README file details

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     <!-- MAIN SHOWCASE SECTION -->
     <section>
       <section class="all-contents">
-        <div class="main-section-container container-fluid bg-white mx-auto  row">
+        <div class="main-section-container container-fluid bg-white mx-auto justify-content-lg-between row">
 
           <!-- featued stories -->
-          <div class="featured-stories-div bg-white pt-3 px-sm-0 mb-4 col-md-5 col-lg-3 order-sm-1 order-md-1">
+          <div class="featured-stories-div bg-white pt-3 px-sm-0 mb-4 col-md-5 col-lg-3 order-sm-1 order-md-1 mr-md-3">
             <div class="px-sm-0">
               <div class="justify-content-start">
                 <h4 class="featured-stories-header">FEATURED STORIES</h4>
@@ -204,7 +204,7 @@
           </div>
 
           <!-- TOP STOREIS -->
-          <div class="top-stories-div bg-white mb-4 col-md-7 col-lg-5 order-md-2 px-sm-0">
+          <div class="top-stories-div bg-white mb-4 col-md-6 col-lg-5 order-md-2 px-sm-0">
             <div>
               <div class="container-fluid">
                 <h4 class="pt-3 featured-stories-header pl-sm-0">TOP STORIES</h4>
@@ -486,7 +486,7 @@
           </div>
 
           <!-- THE DEBATE -->
-          <div class="order-sm-2 container-fluid col-lg-4 px-0">
+          <div class="order-sm-2 container-fluid col-lg-3 px-0">
             <section class="the-debate container-fluid mx-auto px-0 pb-3">
               <div class="the-debate-div bg-white mb-4">
                 <div class="the-debate-heading">
