fix linter errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
         <div>
-          <img id="" class="newsweek-logo ml-3" src="images/newsweek-logo.svg" alt="NewsWeek-logo" />
+          <img class="newsweek-logo ml-3" src="images/newsweek-logo.svg" alt="NewsWeek-logo" />
         </div>
         <div class="d-flex align-items-center">
           <i class="ml-3 fas fa-user-alt d-lg-none d-md-none"></i>
@@ -71,7 +71,6 @@
         <li class="pl-4"><a class="black-text bottom-nav-links" href="">CORONA VIRUS</a></li>
         <li class="pl-4"><a class="black-text bottom-nav-links" href="">2020 ElECTION</a></li>
       </ul>
-    </nav>
     </nav>
 
 
