fix min-width of sm

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <main>
     <header>
       <nav class="d-flex px-4 justify-content-between align-items-center">
-        <div class="d-lg-block d-sm-none d-md-none">
-          <ul class="d-flex list-unstyled align-items-lg-center">
+        <div class="d-lg-block d-none  d-sm-none d-md-none">
+          <ul class="d-lg-flex  list-unstyled align-items-lg-center">
             <li>
               <a href=""><img class="weather-logo" src="./images/sun-cloud.png" alt=""></a>
             </li>
@@ -63,7 +63,7 @@
         </li>
       </ul>
 
-      <ul class="border-bottom py-1 pl-lg-5 list-unstyled d-lg-flex font-weight-bold black-text  mb-lg-0">
+      <ul class="border-bottom py-1 pl-lg-5 d-none list-unstyled d-lg-flex font-weight-bold black-text  mb-lg-0">
         <li class=""><a class="black-text" href="">TRENDING</a></li>
         <li class="pl-4"><a class="black-text bottom-nav-links" href="">DONALD TRUMP</a></li>
         <li class="pl-4"><a class="black-text bottom-nav-links" href="">JOE BIDEN</a></li>
@@ -1155,7 +1155,7 @@
 
         <!-- NEWS LETTER -->
         <section class="news-section bg-white container-fluid my-3 mt-lg-5 pb-3">
-          <h4 class="font-weight-bold py-sm-3">NEWS LETTER</h4>
+          <h4 class="font-weight-bold py-sm-3 ml-sm-2">NEWS LETTER</h4>
           <div
             class="news-letter border p-md-1 p-sm-5 d-sm-flex d-md-flex flex-md-row flex-sm-column justify-content-sm-center align-items-sm-center justify-content-md-center align-items-md-center">
             <div class="mr-md-3">
