--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="d-flex align-items-center">
           <i class="ml-3 fas fa-user-alt d-lg-none d-md-none"></i>
-          <button class="login border-0 font-weight-bold text-white d-sm-none d-md-block">LOGIN</button>
+          <button class="login border-0 font-weight-bold text-white d-none d-md-block">LOGIN</button>
           <button class="subscribe ml-3 my-2 btn btn-warning font-weight-bold">
             Subscribe
           </button>
