--- a/index.html
+++ b/index.html
@@ -1127,6 +1127,349 @@
         </div>
       </section>
 
+      <!-- FEATURE SLIDESHOWS -->
+      <section class="mt-3 container-fluid bg-white ">
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>U.S</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>World</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>Business</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>Tech & Science</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>Culture</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+
+
+          </div>
+        </div>
+
+        <div class="us-container container-fluid pt-md-2 border-top border-bottom">
+          <h3>Sports</h3>
+          <div class="us-container-grid d-flex  ">
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-lg-flex flex-column ">
+              <img src="images/feature-slidshow.jpg" alt="">
+              <div class="">
+                <p> <a class="font-weight-bold black-text us-text" href="">Kellyanne Conway Abruptly Announces White
+                    House
+                    Departure</a>
+                </p>
+              </div>
+            </div>
+
+            <div class=" container-fluid ">
+              <div class="d-flex us-small border-bottom ">
+
+                <img class="us-small-img-1 mr-lg-2 mb-lg-3"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small mb-lg-3 border-bottom pt-lg-2 pb-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+              <div class="d-flex us-small-1 mb-lg-3 pt-lg-2">
+
+                <img class="us-small-img-2 mr-lg-2"
+                  src="https://d.newsweek.com/en/full/1626928/police-line.jpg?w=397&h=265&f=91f5fcaf6a62ba7becec7a1c0f644587"
+                  alt="">
+                <p> <a class="us-small-text black-text font-weight-bold" href="">Wisconsin Police Shoot Black Man,
+                    Quelling a Domestic
+                    Dispute</a> </p>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </section>
+
       <!-- SUBSCRIBE -->
       <div class="subscribe-newsletter-grid">
         <section class="sub-sec bg-white mt-3 py-5 container-fluid">
