fix linter errors

--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
 
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>U.S</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
@@ -1162,7 +1162,7 @@
         </div>
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>World</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
@@ -1217,7 +1217,7 @@
         </div>
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>Business</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
@@ -1272,7 +1272,7 @@
         </div>
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>Tech & Science</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
@@ -1327,7 +1327,7 @@
         </div>
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>Culture</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
@@ -1382,7 +1382,7 @@
         </div>
         <div class="us-container container-fluid pt-md-2 border-top border-bottom">
           <h3>Sports</h3>
-          <div class="us-container-grid   ">
+          <div class="us-container-grid   w-100">
             <div class="d-lg-flex flex-column ">
               <img class="w-100" src="images/feature-slidshow.jpg" alt="">
               <div class="">
