--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <main>
-    <header>
+    <header class="sticky-top ">
       <nav class="d-flex px-4 justify-content-between align-items-center">
         <div class="d-lg-block d-none d-sm-none d-md-none">
           <ul class="d-lg-flex  list-unstyled align-items-lg-center">
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <nav class="d-sm-none d-lg-block bg-white">
+    <nav class="d-sm-none d-lg-block bg-white ">
       <ul
         class="nav-lg-middle list-unstyled d-none d-lg-flex py-lg-2 text-roboto font-weight-bold border-bottom pb-2 w-100 position-relative">
         <li class="px-lg-2 border-right"><a class="text-black" href="">U.S.</a></li>
@@ -63,7 +63,7 @@
         </li>
       </ul>
 
-      <ul class="border-bottom py-1 pl-lg-5 d-none list-unstyled d-lg-flex font-weight-bold text-black  mb-lg-0">
+      <ul class="  border-bottom py-1 pl-lg-5 d-none list-unstyled d-lg-flex font-weight-bold text-black  mb-lg-0">
         <li class=""><a class="text-black" href="">TRENDING</a></li>
         <li class="pl-4"><a class="text-black bottom-nav-links" href="">DONALD TRUMP</a></li>
         <li class="pl-4"><a class="text-black bottom-nav-links" href="">JOE BIDEN</a></li>
